added to portfolio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is offical portfolio page of Christine Munoz">
     <meta name="keywords" content="Christine Munoz, portfolio, bigrpaphy, contact,">
     <meta name="author" contents="Christine Munoz">
@@ -55,7 +55,7 @@
                 Also, I love being a mom to my amazing and wonderful daughter.</strong>
          </p>
 <p>
-   <strong> Cont..</strong>
+   <strong> Email: christinetechwork5@gmail.com </strong>
 </p>
 </article>
 </section>
@@ -70,6 +70,7 @@
             <a href="http://github.com/"target="_blank"><img src="assets/images/icon_github.png" alt="link to Christine's GitHub page"></a>></a>
             <a href="https://www.linkedin.com/in/christine-m-2082471a5/" target="_blank">
                 <img src="assets/images/icon_linkedin.png" alt="link to Christine's LinkedIn page"></a>
+                <a href="https://mail.google.com/mail/u/0/?tab=rm#inbox"target="_blank"><img src="assets/images/logogmail.png" alt="link to Christine's email"></a>></a>
 
     </figure>
 </section>
