--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,9 @@
 
 </head>
 <body>
+
+    <body style = background:url("https://live.staticflickr.com/2760/4070724357_aec812c0be_b.jpg")></style>
+
 <div id="top_pane" class="clearfix">
      <div class="container">
          <header>
@@ -63,6 +66,7 @@
         <a href="http://github.com/"target="_blank"><img src="assets/images/icon_github.png" alt="link to Christine's GitHub page"></a>></a>
         <a href="https://www.linkedin.com/in/christine-m-2082471a5/" target="_blank">
             <img src="assets/images/icon_linkedin.png" alt="link to Christine's LinkedIn page"></a>
+        <a href="#"target="_blank"><img src="assets/images/logogmail.png" alt="link to Christine's email"></a>></a>
 
     </figure>
 </section>
