--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,10 @@
 
 </head>
 <body>
- 
+    
+    <body style = background:url("https://images.unsplash.com/photo-1503252947848-7338d3f92f31?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80")></style>
+    
+
     <div id="top_pane" class="clearfix">
         <div class="container">
             <header>
@@ -115,6 +118,7 @@
         <a href="http://github.com/"target="_blank"><img src="assets/images/icon_github.png" alt="link to Christine's GitHub page"></a>></a>
         <a href="https://www.linkedin.com/in/christine-m-2082471a5/" target="_blank">
             <img src="assets/images/icon_linkedin.png" alt="link to Christine's LinkedIn page"></a>
+        <a href="#"target="_blank"><img src="assets/images/logogmail.png" alt="link to Christine's email"></a>></a>
 
     </figure>
 </section>
